--- a/components/atom/popover/src/styles/settings.scss
+++ b/components/atom/popover/src/styles/settings.scss
@@ -23,9 +23,4 @@ $w-atom-popover-arrow: $p-m + $p-s !default;
 $h-atom-popover-arrow: $p-m !default;
 $c-atom-popover-arrow: $bdc-atom-popover !default;
 
-$popover-type: (
-  dark: (
-    bgc: $c-gray-dark-3,
-    bdc: $c-gray-dark-3
-  )
-) !default;
+$popover-type: () !default;
