--- a/components/atom/popover/demo/index.scss
+++ b/components/atom/popover/demo/index.scss
@@ -2,6 +2,13 @@
 
 @import '../src/index';
 
+$popover-type: (
+  dark: (
+    bgc: $c-gray-dark-3,
+    bdc: $c-gray-dark-3
+  )
+);
+
 .DemoAtomPopover-section {
   .blink {
     color: currentColor;
