--- a/components/molecule/stepper/src/styles/settings.scss
+++ b/components/molecule/stepper/src/styles/settings.scss
@@ -27,7 +27,7 @@ $fz-stepper-label: inherit !default; // $fz-progress-steps-description
 
 // justify-content-types
 $jc-molecule-stepper: (
-  legacy: space-around,
+  legacy: space-between,
   flex-start: flex-start,
   center: center,
   flex-end: flex-end,
