--- a/components/molecule/selectPopover/src/styles/settings.scss
+++ b/components/molecule/selectPopover/src/styles/settings.scss
@@ -11,6 +11,7 @@ $bgc-select-popover-content: $c-white !default;
 $bd-select-popover-content: solid 1px $c-gray-light-3 !default;
 $bdt-select-popover-action-bar: solid 1px $c-gray-light-3 !default;
 
+$bgc-select-popover-selected: $bgc-select-popover-hover !default;
 $bdc-select-popover-selected: $c-primary !default;
 $c-select-popover-selected: $c-primary !default;
 
