feat(components/molecule/photoUploader): add overflow hidden to make visible the defined border-radi

--- a/components/molecule/photoUploader/src/styles/index.scss
+++ b/components/molecule/photoUploader/src/styles/index.scss
@@ -137,6 +137,7 @@ $skeleton-class: '#{$base-class}-skeleton';
   box-shadow: $bxsh-photo-uploader-thumb-card;
   cursor: grab;
   display: inline-block;
+  overflow: hidden;
 
   &Card {
     background: $bg-photo-uploader-thumb-card;
