refactor(components/molecule/badgeCounter): Refactor style to badgeCounter with three characters

--- a/components/molecule/badgeCounter/src/styles/index.scss
+++ b/components/molecule/badgeCounter/src/styles/index.scss
@@ -77,7 +77,8 @@ $base-class: '.sui-MoleculeBadgeCounter';
       }
 
       &--threeCharacters {
-        border-radius: $bdrs-molecule-badge-counter;
+        border-radius: $bdrs-molecule-badge-counter-threeCharacters;
+        min-width: $molecule-badge-counter-threeCharacters-diameter;
         padding: 0 $p-s;
       }
     }
