feat(components/molecule/photoUploader): center text when text dont fit on container

--- a/components/molecule/photoUploader/src/styles/index.scss
+++ b/components/molecule/photoUploader/src/styles/index.scss
@@ -52,6 +52,7 @@ $skeleton-class: '#{$base-class}-skeleton';
     align-items: center;
     display: flex;
     flex-direction: column;
+    text-align: center;
 
     &Text {
       margin-top: $m-m;
