feat(components/molecule/photoUploader): make mininum height a default scss var to modify its value

--- a/components/molecule/photoUploader/src/styles/settings.scss
+++ b/components/molecule/photoUploader/src/styles/settings.scss
@@ -47,7 +47,7 @@ $s-photo-uploader-thumb-icons: 16px !default;
 $w-photo-uploader-thumb-image-desktop: 160px !default;
 $w-photo-uploader-thumb-image: 100% !default;
 
-$mih-photo-uploader: 249px;
+$mih-photo-uploader: 249px !default;
 $s-photo-uploader-counter: 16px;
 $bgc-photo-uploader-counter: $c-primary !default;
 $bdrs-photo-uploader-counter: $bdrs-rounded !default;
