--- a/components/molecule/photoUploader/src/styles/settings.scss
+++ b/components/molecule/photoUploader/src/styles/settings.scss
@@ -48,7 +48,7 @@ $w-photo-uploader-thumb-image-desktop: 160px !default;
 $w-photo-uploader-thumb-image: 100% !default;
 
 $mih-photo-uploader: 249px !default;
-$s-photo-uploader-counter: 16px;
+$s-photo-uploader-counter: 16px !default;
 $bgc-photo-uploader-counter: $c-primary !default;
 $bdrs-photo-uploader-counter: $bdrs-rounded !default;
 $h-photo-uploader-thumb-image: ($w-photo-uploader-thumb-image * 3) * 0.25;
