--- a/components/molecule/accordion/src/styles/index.scss
+++ b/components/molecule/accordion/src/styles/index.scss
@@ -1,14 +1,17 @@
-$base-class: '.sui-MoleculeAccordion';
+$base-name: 'sui-MoleculeAccordion';
+$base-class: '.#{$base-name}';
 
+$base-class-element: '.#{$base-name}Element';
 $base-class-item: '#{$base-class}Item';
 $base-class-item-header: '#{$base-class-item}Header';
 $base-class-item-header-icon: '#{$base-class-item-header}Icon';
 $base-class-item-panel: '#{$base-class-item}Panel';
 
+#{$base-class-item},
 #{$base-class-item-header},
 #{$base-class-item-panel} {
   box-sizing: border-box;
-  border-color: $c-gray;
+  border-color: $bdc-accordion-item;
   border-style: solid;
   border-width: 0;
   #{$base-class-item-header}Button,
@@ -16,7 +19,7 @@ $base-class-item-panel: '#{$base-class-item}Panel';
     &[aria-disabled='true'] {
       cursor: not-allowed;
       #{$base-class-item-header}ButtonContent,
-      #{$base-class-item-header-icon}Wrapper,
+      #{$base-class-item-header-icon},
       #{$base-class-item-panel}ContentWrapper {
         opacity: 0.5;
       }
@@ -24,7 +27,85 @@ $base-class-item-panel: '#{$base-class-item}Panel';
   }
 }
 
+#{$base-class-item} {
+  border-width: $bdw-accordion-item;
+  border-radius: $bdrs-accordion-item;
+  overflow: hidden;
+  #{$base-class-item-header},
+  #{$base-class-item-panel} {
+    border-width: 0;
+  }
+  #{$base-class-item-header} {
+    border-bottom-width: $bdw-accordion-item;
+  }
+}
+
+#{$base-class-element} {
+  background-color: lightblue;
+  border-radius: $bdrs-accordion-item;
+  + #{$base-class-element} {
+    &#{$base-class-item-header} {
+      &[data-expanded='false'] {
+        background-color: lightpink;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+      &[data-expanded='true'] {
+        background-color: lightgreen;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+    }
+    background-color: lightpink;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+  + #{$base-class-element}#{$base-class-item-header}:not(:nth-last-of-type(1)),
+  + #{$base-class-element}#{$base-class-item-panel}:not(:nth-last-of-type(1)) {
+    background-color: lightgoldenrodyellow;
+    border-radius: 0;
+  }
+  &:nth-of-type(1) {
+    background-color: lightcyan;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  //&[data-expanded='false']:nth-last-of-type(1) {
+  //  background-color: lightpink;
+  //  border-bottom-left-radius: $bdrs-accordion-item;
+  //  border-bottom-right-radius: $bdrs-accordion-item;
+  //}
+  //&:nth-last-of-type(1) {
+  //  background-color: lightcoral;
+  //  border-bottom-left-radius: $bdrs-accordion-item;
+  //  border-bottom-right-radius: $bdrs-accordion-item;
+  //}
+}
+
+//#{$base-class-element}[aria-expanded='false']:nth-last-of-type(1),
+//#{$base-class-element}[aria-expanded='true']:last-of-type {
+//  background-color: lightcoral;
+//  border-radius: 0 0 $bdrs-accordion-item $bdrs-accordion-item;
+//}
+//
+//#{$base-class-element}[data-expanded='true']:nth-last-of-type(1) {
+//  background-color: lightpink;
+//  border-radius: 0;
+//}
+//#{$base-class-element}[data-expanded='false']:nth-last-of-type(1) {
+//  background-color: lightsalmon;
+//  border-radius: 0 0 $bdrs-accordion-item $bdrs-accordion-item;
+//}
+
+//#{$base-class-element} {
+//  background-color: lightsalmon;
+//  border-radius: 0 0 $bdrs-accordion-item $bdrs-accordion-item;
+//  & + *:not([class~='#{$base-name}']) {
+//  }
+//}
+
 #{$base-class-item-header} {
+  overflow: hidden;
   border-left-width: $bdw-accordion-item;
   border-right-width: $bdw-accordion-item;
   border-bottom-width: $bdw-accordion-item;
@@ -41,17 +122,21 @@ $base-class-item-panel: '#{$base-class-item}Panel';
     width: 100%;
     height: 100%;
     text-align: inherit;
-    min-height: $sz-base * 5;
+    min-height: $h-accordion-item-button;
     display: flex;
     align-items: center;
+    &:focus-visible {
+      outline: $bdw-accordion-item solid $c-primary;
+      box-shadow: 0 0 $m-s $m-xs $c-primary;
+    }
     &#{$base-class-item-header}Button--icon-position {
       &-left {
         flex-direction: row-reverse;
-        #{$base-class-item-header}IconWrapper {
-          #{$base-class-item-header}IconDefault {
+        #{$base-class-item-header-icon} {
+          #{$base-class-item-header-icon}Default {
             &:empty {
               transform: rotate(-180deg);
-              &#{$base-class-item-header}IconDefault--expanded {
+              &#{$base-class-item-header-icon}Default--expanded {
                 transform: rotate(0deg);
               }
             }
@@ -73,20 +158,21 @@ $base-class-item-panel: '#{$base-class-item}Panel';
       width: 100%;
       height: 100%;
       line-height: 1.15;
-      font-weight: 400;
+      font-weight: $fw-molecule-accordion-header;
+      font-size: $fz-base;
+      font-family: $ff-molecule-accordion-header;
       overflow: hidden;
       text-align: inherit;
       text-overflow: ellipsis;
       white-space: nowrap;
-      font-size: $fz-base;
     }
     #{$base-class-item-header}ButtonContent,
-    #{$base-class-item-header}IconWrapper {
-      color: $c-text-base;
+    #{$base-class-item-header}Icon {
+      color: $c-accordion-item-header;
     }
-    #{$base-class-item-header}IconWrapper {
+    #{$base-class-item-header-icon} {
       padding: $sz-base;
-      #{$base-class-item-header}IconDefault {
+      #{$base-class-item-header-icon}Default {
         display: flex;
         &:empty {
           $sz-empty-icon: $sz-icon-xs;
@@ -102,7 +188,7 @@ $base-class-item-panel: '#{$base-class-item}Panel';
             top: 50%;
             bottom: 50%;
             width: 100%;
-            border-bottom: 1px solid $c-gray;
+            border-bottom: $bdw-s solid $bdc-accordion-item;
             box-sizing: border-box;
           }
           &::before {
@@ -114,7 +200,7 @@ $base-class-item-panel: '#{$base-class-item}Panel';
             right: 33%;
           }
         }
-        &#{$base-class-item-header}IconDefault--expanded {
+        &#{$base-class-item-header-icon}Default--expanded {
           transform: rotate(0deg);
         }
       }
@@ -126,6 +212,7 @@ $base-class-item-panel: '#{$base-class-item}Panel';
 }
 
 #{$base-class-item-panel} {
+  overflow: hidden;
   border-left-width: $bdw-accordion-item;
   border-right-width: $bdw-accordion-item;
   border-bottom-width: $bdw-accordion-item;
@@ -133,7 +220,11 @@ $base-class-item-panel: '#{$base-class-item}Panel';
   overflow: hidden;
   &[aria-expanded='false'] {
     max-height: 0;
+    opacity: 0;
     border-bottom: 0;
+  }
+  &[aria-collapsed='true'] {
+    opacity: 1;
   }
   #{$base-class-item-panel}Content {
     padding: $sz-base;
