--- a/components/molecule/accordion/src/_settings.scss
+++ b/components/molecule/accordion/src/_settings.scss
@@ -4,8 +4,8 @@ $bdrs-accordion-tab: 0 !default;
 $bdrs-accordion-tab-scrollbar-thumb: $bdrs-l !default;
 $bdw-accordion-tab-scrollbar: $bdw-base !default;
 $bgc-accordion-tab-container: $c-white !default;
-$c-accordion-tab-icon: $c-primary !default;
-$sz-accordion-tab-icon: $sz-icon-s !default;
+$c-accordion-tab-icon: $c-gray-dark-3 !default;
+$sz-accordion-tab-icon: $sz-icon-xs !default;
 $c-accordion-tab-text: $c-text-base !default;
 $c-accordion-tab-scrollbar-thumb: $c-gray !default;
 $h-accordion-tab-btn: $sz-base * 5 !default;
