feat(components/molecule/breadcrumb): Add children prop and refactor base class

--- a/components/molecule/breadcrumb/src/styles/index.scss
+++ b/components/molecule/breadcrumb/src/styles/index.scss
@@ -10,6 +10,16 @@ $base-class: '.sui-BreadcrumbBasic';
   display: flex;
   padding: $p-breadcrumb-mobile;
 
+  &-children {
+    display: none;
+    @include media-breakpoint-up(m) {
+      display: block;
+    }
+    .is-expanded & {
+      display: block;
+    }
+  }
+
   &-btn {
     @include reset-button;
     @include media-breakpoint-up(m) {
