refactor(components/molecule/breadcrumb): Rename children to leftAddon so now is more clear

--- a/components/molecule/breadcrumb/src/styles/index.scss
+++ b/components/molecule/breadcrumb/src/styles/index.scss
@@ -10,7 +10,7 @@ $base-class: '.sui-BreadcrumbBasic';
   display: flex;
   padding: $p-breadcrumb-mobile;
 
-  &-children {
+  &-leftAddon {
     display: none;
     @include media-breakpoint-up(m) {
       display: block;
